LAVA - Remove and refactor mui from components

--- a/src/styles/_variables-color.scss
+++ b/src/styles/_variables-color.scss
@@ -1,8 +1,10 @@
 :root {
   --lava-brand: #FF3900;
 
-  --orange: #EF6000;
-  --light-orange: #FF822F;
+  --orange-300: #FF822F;
+  --orange-400: #FF6839;
+  --orange-500: #EF6000;
+  --orange-600: #F93800;
 
   --dark-red: #841D00;
   --darker-red: #410E00;
@@ -14,7 +16,8 @@
   --grey-300: #5E6167;
   --grey-400: #212630;
   --grey-500: #1B212A;
-  --grey-600: #05090F;
+  --grey-600: #0C121A;
+  --grey-700: #05090F;
 
   --border-grey: #EDEDED;
   --white: #FFFFFF;
