--- a/src/styles/_variables-measurements.scss
+++ b/src/styles/_variables-measurements.scss
@@ -7,9 +7,11 @@
   --px5: 0.3125em;
   --px6: 0.375em;
   --px8: 0.5em;
+  --px9: 0.5625em;
   --px10: 0.625em;
   --px11: 0.6875em;
   --px12: 0.75em;
+  --px13: 0.8125em;
   --px14: 0.875em;
   --px18: 1.125em;
   --px20: 1.25em;
@@ -46,13 +48,13 @@
   --font-size-14-px20: 1.428em;
   --font-size-14-px24: 1.714em;
   --font-size-14-px26: 1.857em;
-  --font-size-14-px27: 1.928em;
+  --font-size-14-px28: 2em;
   --font-size-14-px30: 2.142em;
   --font-size-14-px32: 2.285em;
   --font-size-14-px36: 2.571em;
   --font-size-14-px40: 2.857em;
   --font-size-14-px44: 3.142em;
-  --font-size-14-px50: 3.571em;
+  --font-size-14-px48: 3.428em;
 
   //MEASURMENTS @12px
   --font-size-12-px1: 0.083em;
