--- a/src/styles/_variables-typography.scss
+++ b/src/styles/_variables-typography.scss
@@ -4,7 +4,7 @@
   --font-family-sharp-book: "sharp_groteskbook_25", sans-serif;
   --font-family-retro: "retro_computer", sans-serif;
 
-  --body-bg-color: var(--dark);
+  --body-bg-color: var(--grey-700);
   --body-color: var(--white);
   --body-font-size: 16px;
   --body-font-family: var(--font-family-helvetica);
