--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,14 @@
+@use "_normalize.scss";
 @use "_fonts.scss";
+@use "_variables-color.scss";
+@use "_variables-measurements.scss";
+@use "_variables-typography.scss";
+@use "_variables-elements.scss";
+
+@use "_typography.scss";
+@use "_button.scss";
+@use "_forms.scss";
+@use "_table.scss";
+
+@use "_layout.scss";
+@use "_helpers.scss";
