--- a/src/styles/MobileMenu.module.scss
+++ b/src/styles/MobileMenu.module.scss
@@ -17,8 +17,8 @@
           display: inline-flex;
           align-items: center;
           justify-content: center;
-          width: 10px;
-          height: 1.5px;
+          width: var(--px10);
+          height: var(--px2);
           background-color: currentColor;
 
           &:before,
@@ -26,17 +26,17 @@
             content: "";
             position: absolute;
             width: 100%;
-            height: 2px;
+            height: var(--px2);
             background-color: currentColor;
             transition: transform 0.3s ease
           }
 
           &:before {
-            top: -4px
+            top: calc(var(--px4) * -1);
           }
 
           &:after {
-            top: 4px
+            top: var(--px4);
           }
         }
 
@@ -84,6 +84,45 @@
           opacity: 1;
           visibility: visible;
           transform: translateY(0);
+        }
+
+        &-wrapper {
+          flex: 1;
+          overflow-y: auto;
+        }
+
+        .c-accordion {
+          padding-bottom: 6em;
+
+          .c-accordion-item {
+            &-content {
+              &-wrapper {
+                padding: 0;
+              }
+
+              ul {
+                display: flex;
+                flex-direction: column;
+                margin: 0;
+                padding: 0;
+                list-style: none;
+
+                li a {
+                  display: flex;
+                  align-items: center;
+                  padding: var(--px18) 1em var(--px18) var(--px32);
+                  transition: color 0.3s ease;
+
+                  &:hover,
+                  &:focus,
+                  &:active,
+                  &.is-active {
+                    color: var(--lava-brand);
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
