--- a/src/styles/HomeSectionHeroEmail.module.scss
+++ b/src/styles/HomeSectionHeroEmail.module.scss
@@ -41,15 +41,16 @@
         display: flex;
         flex-direction: column;
         row-gap: var(--px32);
-        padding: 113px var(--responsive-24px-to-16px);
+        padding: 7.0625em var(--responsive-24px-to-16px); //113px 24/16px
         background: url("../../public/images/lava-cta-bg-x2.webp") no-repeat center /cover;
         border-radius: var(--hero-email-border-radius);
         overflow: hidden;
 
         h2 {
           width: 100%;
-          max-width: 692px;
+          max-width: 12.357em; //692px @56px
           margin: 0 auto;
+          text-align: center;
         }
 
         .c-form-group {
@@ -57,7 +58,7 @@
           --input-height: auto;
 
           width: 100%;
-          max-width: 406px;
+          max-width: 25.375em; //406px
           margin: 0 auto;
 
           .c-form-group-input-group {
@@ -86,8 +87,69 @@
           column-gap: var(--px24);
 
           >.c-button {
-            --btn-size: 72px;
-            --btn-icon-size: 24px;
+            --btn-size: 4.5em; //72px
+            --btn-icon-size: var(--px24);
+          }
+        }
+      }
+
+      @media(max-width: 991px) {
+        &-wrapper {
+          row-gap: var(--px24);
+          padding: var(--px40) var(--responsive-24px-to-16px);
+          background: url("../../public/images/lava-cta-bg-mobile-x2.webp") no-repeat center /cover;
+
+          h2 {
+            font-size: var(--px20);
+            line-height: 1.4em;
+            letter-spacing: -0.01em;
+            max-width: 12.8em; //256px @20px
+          }
+
+          form {
+            width: 100%;
+            max-width: 25.375em; //406px
+            margin: 0 auto;
+            text-align: center;
+
+            .c-form-group {
+              --input-border-radius: var(--px40);
+              --input-height: var(--px48);
+              --input-padding: var(--px13) var(--px24);
+
+              max-width: 100%;
+              margin: 0 auto var(--px8);
+            }
+
+            .c-button {
+              --btn-min-height: var(--px48);
+              --btn-padding-y: var(--px5);
+              --btn-padding-x: var(--px24);
+              --btn-border-radius: var(--px40);
+              --btn-border-width: var(--px1);
+              --btn-font-size: 1em;
+
+              width: 100%;
+              max-width: 100%;
+            }
+          }
+        }
+        &-footer {
+          padding-top: var(--px48);
+
+          h3 {
+            font-size: var(--px12);
+            line-height: 1em;
+            letter-spacing: 0.08em;
+          }
+
+          > div {
+            column-gap: 1em;
+
+            >.c-button {
+              --btn-size: var(--px48);
+              --btn-icon-size: 1em;
+            }
           }
         }
       }
