--- a/src/styles/HomeSectionPools.module.scss
+++ b/src/styles/HomeSectionPools.module.scss
@@ -6,10 +6,14 @@
       gap: var(--px12);
       width: 100%;
       max-width: 100%;
-      padding-bottom: var(--px64);
+      padding-bottom: var(--px48);
 
       @media (min-width: 768px) {
         grid-template-columns: repeat(auto-fit, minmax(380px,1fr));
+      }
+
+      @media (min-width: 992px) {
+        padding-bottom: var(--px64);
       }
     }
   }
