--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -47,6 +47,22 @@
     font-size: 1em;
   }
 
+  tfoot tr td {
+    .c-table-tfoot-td.default-empty {
+      padding: var(--px80) var(--responsive-24px-to-16px);
+      text-align: center;
+      color: var(--grey-100);
+
+      > p {
+        color: var(--grey-200);
+      }
+    }
+  }
+
+  .c-table-mobile-text {
+    color:  var(--grey-100);
+  }
+
   @media (max-width: 991px) {
     &.is-responsive {
       display: block;
@@ -96,6 +112,14 @@
               border-bottom: 0;
             }
           }
+        }
+      }
+
+      tfoot tr td {
+        .c-table-tfoot-td.default-empty {
+          background-color: var(--grey-600);
+          border-radius: 1em;
+          border: var(--px1) solid var(--grey-400);
         }
       }
     }
