--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -22,7 +22,7 @@ body {
   font-size: var(--body-font-size);
   font-family: var(--body-font-family);
   font-weight: 400;
-  line-height: normal;
+  line-height: 1.4em; //22.4px
 
   &.menu-is-open,
   &.filter-is-open,
@@ -97,7 +97,7 @@ svg {
 }
 
 i {
-  flex-shrink: 0;
+  flex: 0 0 auto;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -107,7 +107,6 @@ i {
     max-height: 100%;
   }
 }
-
 
 //helpers
 .text-14 {
