LAVA - Final cleaning

--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -10,7 +10,7 @@
         gap: var(--px24);
 
         @media (min-width: 1200px) {
-          grid-template-columns: 232px 1fr;
+          grid-template-columns: 14.5em 1fr; //232px
           gap: var(--px32);
         }
 
@@ -25,7 +25,7 @@
               color: var(--grey-200);
 
               @media (max-width: 1199px) {
-                max-width: 548px;
+                max-width: 34.25em; //548px
               }
             }
 
@@ -59,7 +59,8 @@
             gap: var(--px24);
 
             @media(min-width: 768px) {
-              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+              grid-template-columns: repeat(3,1fr);
+              //grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             }
 
             @media(min-width: 992px) {
