--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,8 +4,10 @@
 @use "_variables-measurements.scss";
 @use "_variables-typography.scss";
 @use "_variables-elements.scss";
+@use "_animations";
 
 @use "_typography.scss";
+@use "_loader.scss";
 @use "_button.scss";
 @use "_forms.scss";
 @use "_table.scss";
