--- a/src/styles/HomeSectionChainsTable.module.scss
+++ b/src/styles/HomeSectionChainsTable.module.scss
@@ -27,6 +27,34 @@
         }
       }
 
+      .c-home-section-chains-mobile-slider {
+        &-wrapper {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 500px auto;
+          gap: var(--px24);
+
+          .swiper {
+            width: 100%;
+            max-width: 100%;
+            height: 100%;
+            max-height: 500px;
+
+            .swiper-wrapper {
+              align-items: stretch;
+              flex-wrap: wrap;
+              width: 0 !important;
+            }
+          }
+        }
+
+        &-footer {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+
       @media (max-width: 991px) {
         .c-table {
           tbody tr td {
