--- a/src/styles/HomeSectionPools.module.scss
+++ b/src/styles/HomeSectionPools.module.scss
@@ -8,8 +8,6 @@
         align-items: center;
         justify-content: center;
         margin-bottom: var(--px32);
-        height: auto;
-        min-height: 698px;
 
         &-wrapper {
           display: grid;
@@ -32,47 +30,25 @@
             min-height: 698px;
           }
 
-          .swiper {
-            flex: 1;
-            width: 100%;
-            max-width: 100%;
-
-            .swiper-wrapper {
-              height: inherit;
-              margin-top: 2px;
-              margin-bottom: 2px;
-
-              @media (min-width: 992px) {
-                display: grid;
-                grid-auto-flow: column;
-                align-items: stretch;
-                grid-template-rows: 1fr;
-                gap: var(--px12);
-
-                .swiper-slide {
-                  margin: 0 !important;
-                  height: auto !important;
-                  width: 100% !important;
-                  max-width: 100% !important;
-                }
-              }
-            }
+          .swiper .swiper-wrapper {
+            margin-top: var(--px2);
+            margin-bottom: var(--px2);
           }
         }
-      }
 
-      .c-home-section-pools-footer {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        row-gap: 1em;
+        .c-home-section-pools-footer {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          row-gap: 1em;
 
-        @media(min-width: 992px) {
-          justify-content: center;
-        }
+          @media(min-width: 992px) {
+            justify-content: center;
+          }
 
-        > .c-button {
-          flex-shrink: 0;
+          > .c-button {
+            flex-shrink: 0;
+          }
         }
       }
     }
