LAVA - Add fix up pool slider

--- a/src/styles/HomeSectionPools.module.scss
+++ b/src/styles/HomeSectionPools.module.scss
@@ -9,6 +9,10 @@
         justify-content: center;
         margin-bottom: var(--px32);
 
+        @media (min-width: 992px) {
+          min-height: 781px;
+        }
+
         &-wrapper {
           display: grid;
           grid-template-columns: 1fr;
@@ -38,8 +42,8 @@
         .c-home-section-pools-footer {
           display: flex;
           align-items: center;
-          justify-content: space-between;
-          row-gap: 1em;
+          justify-content: center;
+          gap: 1em;
 
           @media(min-width: 992px) {
             justify-content: center;
