--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @use "_typography.scss";
 @use "_loader.scss";
 @use "_button.scss";
+@use "_button-group.scss";
 @use "_forms.scss";
 @use "_table.scss";
 
@@ -16,4 +17,5 @@
 @use "_helpers.scss";
 @use "_tokens.scss";
 
+@use "_custom-react-select.scss";
 @use "_custom-swiper.scss";
