--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -2,6 +2,7 @@
   --token-accent-color: #00EC97;
 }
 
+.evmost,
 .evmos {
   --token-accent-color: #EC4E32;
 }
@@ -10,6 +11,19 @@
   --token-accent-color: #FFFFFF;
 }
 
+.ethermint {
+  --token-accent-color: #3D6695;
+}
+
+.fuse {
+  --token-accent-color: #B4F9BA;
+}
+
+.fvm {
+  --token-accent-color: #72EA9A;
+}
+
+.strk,
 .starknet {
   --token-accent-color: #EC796B;
 }
@@ -18,6 +32,18 @@
   --token-accent-color: #7B2BF9;
 }
 
+.cosmoshub,
+.cosmoshubt {
+  --token-accent-color: #6300FF;
+}
+
+.strgz,
+.strgzt,
+.stargaze {
+  --token-accent-color: #DB2777;
+}
+
+.eth,
 .ethereum,
 .eth1 {
   --token-accent-color: #627EE9;
