--- a/src/styles/HomeSectionPoolsCard.module.scss
+++ b/src/styles/HomeSectionPoolsCard.module.scss
@@ -147,13 +147,17 @@
 
           > span {
             flex: 0 0 100%;
-            display: block;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
 
             >em {
               color: var(--grey-100);
+              display: block;
             }
 
             >small {
+              display: block;
               color: var(--grey-200);
             }
           }
@@ -227,7 +231,7 @@
         }
       }
 
-      @media(max-width: 992px) {
+      @media(max-width: 991px) {
         &-header {
           grid-template-columns: 1fr;
         }
@@ -236,6 +240,10 @@
           flex-direction: column;
           align-items: flex-start;
           row-gap: var(--px4);
+
+          > span {
+            flex: unset;
+          }
         }
 
         &-rewards-data li {
