--- a/src/styles/HomeSectionPools.module.scss
+++ b/src/styles/HomeSectionPools.module.scss
@@ -7,6 +7,7 @@
         position: relative;
         z-index: 10;
         display: flex;
+        flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
         gap: 1em;
